src/view/overview/snapshots/nifi_lens__view__overview__render__tests__node_detail_modal.snap
---
source: src/view/overview/render.rs
expression: "format!(\"{}\", term.backend())"
---
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"          ┌ node1:8080 ──────────────────────────────────────────────────────────────────┐          "
"          │  heap     ██░░░   52%         GC                            count    millis  │          "
"          │  load      0.38  1.5            G1 Young                    10       50ms    │          "
"          │  threads  50                    G1 Old                      2        120ms   │          "
"          │  uptime   2h 30m              ───────────────────────────────────────────────│          "
"          │                               Repositories                                   │          "
"          │                                 content                          ██░░    60% │          "
"          │                                 flowfile                         █░░░    30% │          "
"          │                                 provenance                       ░░░░    20% │          "
"          └──────────────────────────────────────────────────────────────────────────────┘          "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
