src/view/overview/snapshots/nifi_lens__view__overview__render__tests__overview_cs_unavailable.snap
---
source: src/view/overview/render.rs
expression: render_to_string(&state)
---
"┌ Components ──────────────────────────────────────────────────────────────────────────────────────┐"
"│  Process groups         0    all in sync   INPUTS     0  OUTPUTS    0                            │"
"│  Processors             0    RUNNING    0  STOPPED    0  INVALID    0  DISABLED   0              │"
"│  Controller services    ?    cs list unavailable                                                 │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Nodes ───────────────────────────────────────────────────────────────────────────────────────────┐"
"│  loading system diagnostics…                                                                     │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Bulletins / min ───────────────────────────────┐┌ Noisy components ──────────────────────────────┐"
"│15m  no bulletins                               ││cnt  source                             worst   │"
"│                                                ││     no bulletins yet                           │"
"│                                                ││                                                │"
"│                                                ││                                                │"
"│                                                ││                                                │"
"└────────────────────────────────────────────────┘└────────────────────────────────────────────────┘"
"┌ Unhealthy queues ────────────────────────────────────────────────────────────────────────────────┐"
"│fill  queue                             src → dst                                         ffiles  │"
"│                                        no queues reported yet                                    │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
