src/view/overview/snapshots/nifi_lens__view__overview__render__tests__overview_unhealthy.snap
---
source: src/view/overview/render.rs
expression: render_to_string(&state)
---
"┌ Processors ──────────────────────────────────────────────────────────────────────────────────────┐"
"│RUNNING 20   STOPPED 10   INVALID 2   DISABLED 0   THREADS 17                                     │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Nodes ───────────────────────────────────────────────────────────────────────────────────────────┐"
"│  loading system diagnostics…                                                                     │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Bulletins / min ───────────────────────────────┐┌ Noisy components ──────────────────────────────┐"
"│15m, worst Error                                ││cnt  source                             worst   │"
"│              █                                 ││  2  Proc0                              Error   │"
"│              █                                 ││  2  Proc1                              Error   │"
"│              █                                 ││  2  Proc2                              Error   │"
"└────────────────────────────────────────────────┘└────────────────────────────────────────────────┘"
"┌ Unhealthy queues ────────────────────────────────────────────────────────────────────────────────┐"
"│fill  queue                             src → dst                                         ffiles  │"
"│ 99%  q0                                Generate → Proc0                                  9000    │"
"│ 98%  q1                                Generate → Proc1                                  9100    │"
"│ 97%  q2                                Generate → Proc2                                  9200    │"
"│ 96%  q3                                Generate → Proc3                                  9300    │"
"│ 95%  q4                                Generate → Proc4                                  9400    │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
