src/view/overview/snapshots/nifi_lens__view__overview__render__tests__overview_with_nodes.snap
---
source: src/view/overview/render.rs
expression: render_to_string(&state)
---
"┌ Processors ──────────────────────────────────────────────────────────────────────────────────────┐"
"│RUNNING 42   STOPPED 3   INVALID 0   DISABLED 1   THREADS 5                                       │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Nodes (2 connected) ─────────────────────────────────────────────────────────────────────────────┐"
"│  node1:8080                                        heap ██░░░  50% gc   50ms       load 0.38  1.5│"
"│  node2:8080                                        heap ██░░░  50% gc   50ms       load 0.38  1.5│"
"│  repositories                                      cont ███░░  60% ff  █░░░░  30%  prov ░░░░  20%│"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Bulletins / min ───────────────────────────────┐┌ Noisy components ──────────────────────────────┐"
"│15m  no bulletins                               ││cnt  source                             worst   │"
"│                                                ││     no bulletins yet                           │"
"│                                                ││                                                │"
"│                                                ││                                                │"
"│                                                ││                                                │"
"└────────────────────────────────────────────────┘└────────────────────────────────────────────────┘"
"┌ Unhealthy queues ────────────────────────────────────────────────────────────────────────────────┐"
"│fill  queue                             src → dst                                         ffiles  │"
"│                                        no queues reported yet                                    │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
